--- a/resume.html
+++ b/resume.html
@@ -166,20 +166,22 @@
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2019/10</p>
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
                             </div>
-                            <div class="col-sm-10">
-                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">1:10无人车多车交互赛</p>
-                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
-                                    在遵守交通规则的前提下，完成直线行驶、变道超车，变道避障、在斑马线前停车。<br>
+                            <a href="https://github.com/shilei31415/AutoDrive">
+                                <div class="col-sm-10">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">1:10无人车多车交互赛</p>
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                        在遵守交通规则的前提下，完成直线行驶、变道超车，变道避障、在斑马线前停车。<br>
 
-                                    1.从摄像头中获取图像。<br>
+                                        1.从摄像头中获取图像。<br>
 
-                                    2.利用霍夫直线变换，识别道路标线。同通过串口，控制无人车底盘运动，达到直线行驶的目的。<br>
+                                        2.利用霍夫直线变换，识别道路标线。同通过串口，控制无人车底盘运动，达到直线行驶的目的。<br>
 
-                                    3.识别道路中的斑马线（停车线），并控制底盘减速停车。<br>
+                                        3.识别道路中的斑马线（停车线），并控制底盘减速停车。<br>
 
-                                    4.通过激光雷达判断前方是否有障碍物，并控制底盘变道。</p>
+                                        4.通过激光雷达判断前方是否有障碍物，并控制底盘变道。</p>
 
-                            </div>
+                                </div>
+                            </a>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
@@ -187,18 +189,18 @@
                                     <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2020/5-至今</p>
                                     <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
                                 </div>
-                                <div class="col-sm-10">
-                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">
+                                <a href="https://github.com/shilei31415/shilei31415.github.io">
+                                    <div class="col-sm-10">
+                                        <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">个人github.io博客</p>
+                                        <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                            建立属于自己的github.io博客，用于介绍自己，并不定期更新<br>
 
-                                        个人github.io博客</p>
-                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
-                                        建立属于自己的github.io博客，用于介绍自己，并不定期更新<br>
+                                            1.在本地电脑编写html网页。<br>
 
-                                        1.在本地电脑编写html网页。<br>
+                                            2.将相关文件上传至github</p>
 
-                                        2.将相关文件上传至github</p>
-
-                                </div>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -209,7 +211,8 @@
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">校内荣誉</p>
                             </div>
                             <div class="col-sm-12">
-                                <p> </p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">3次获得"三等奖学金"、1次"二等奖学金"</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">江苏省机器人大赛一等奖</p>
                             </div>
                         </div>
                     </div>
@@ -248,8 +251,12 @@
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">证书</p>
                             </div>
                             <div class="col-sm-12">
-                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2015/2</div>
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2018/2</div>
                                 <span style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">大学英语四级</span>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2018/4</div>
+                                <span style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">普通话二级甲等</span>
                             </div>
                         </div>
                     </div>
@@ -262,7 +269,7 @@
                         <div class="author-avatar row"><a href="#"><img src="images/author.jpg" alt="" class="img-circle"></a></div>
                         <a href="#"><h2 class="author-name">施磊</h2></a>
                         <h5 class="author-title">My resume</h5>
-                        <p>利用html编写自己的简历,希望给interviewer更加生动的自我介绍</p>
+                        <p>利用 html 编写自己的简历,希望给 interviewer 更加生动的自我介绍</p>
                         <a href="resume.doc" class="know-more">download</a>
                     </div>
                 </aside>
@@ -297,7 +304,7 @@
 
             </div>
         </div>
-        <h5 class="copyright">Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></h5>
+        <h5 class="copyright">Thanks for <a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></h5>
     </div>
 </footer>
 
