--- a/bolg1.html
+++ b/bolg1.html
@@ -206,7 +206,7 @@
                         <a href="#"><h2 class="author-name">施磊</h2></a>
                         <h5 class="author-title">My resume</h5>
                         <p>截至6月10日,我的github博客,基本建立完成.发此篇简述建立过程,供大家学习</p>
-                        <a href="resume.html" class="know-more">resume</a>
+                        <a href="resume.html" class="taxonomy" style="font-size: 15pt">resume</a>
                     </div>
                 </aside>
             </div>
