--- a/blog1.html
+++ b/blog1.html
@@ -127,6 +127,9 @@
                             期初打算像<a href="http://meixinhu.com/">meixinhu.com</a>一样搞一个"shilei.com"这样高大上的域名.
                             看了百度, 看了阿里巴巴, 第一次发现自己的名字那么值钱.
                         </p>
+                        <div class="col-sm-12">
+                            <img src="images/blog/yuming.png" alt="loading picture" class="img-thumbnail">
+                        </div>
                         <p>
                             在我一筹莫展之际, 无意间瞟到了<a href="https://morvanzhou.github.io/" style="font-size: 11pt">莫烦python</a>
                             的域名. 呦,居然还有这样的域名(github.io), 查了查 CSDN, 发现这域名好啊! 申请域名不收费, 服务器也不收费, 就是卡了点.
@@ -161,6 +164,9 @@
                             每一个HTML文件都是由标签组成, 需要经常在某个阴暗的角落放个 p . 至于每个标签啥意思, 我就不赘述了,
                             <a href="https://www.bilibili.com/">pink老师</a>讲的更好
                         </p>
+                        <div class="col-sm-12">
+                            <img src="gif/html.gif" alt="loading picture">
+                        </div>
                         <p>
                             当然只有HTML, 你会觉得自己穿越到了上世纪. 除了HTML, 还需要有CSS和JAVA,
                         </p>
@@ -194,6 +200,9 @@
                             ------------ git commit -m " " 添加备注;<br>
                             ------------ git push 进行上传.<br>
                         </p>
+                        <div class="col-sm-12">
+                            <img src="gif/git.gif" alt="loading picture">
+                        </div>
                     </div>
                 </article>
             </div>
