--- a/blog1.html
+++ b/blog1.html
@@ -203,6 +203,12 @@
                         <div class="col-sm-12">
                             <img src="gif/git.gif" alt="loading picture">
                         </div>
+                        <div class="row">
+                            <a class="taxonomy" href="https://github.com/shilei31415/shilei31415.github.io"
+                               style="font-size: 15pt">
+                                <h3>4.code</h3>
+                            </a>
+                        </div>
                     </div>
                 </article>
             </div>
