--- a/blog1.html
+++ b/blog1.html
@@ -165,7 +165,7 @@
                             <a href="https://www.bilibili.com/">pink老师</a>讲的更好
                         </p>
                         <div class="col-sm-12">
-                            <img src="gif/html.gif" alt="loading picture">
+                            <img src="gif/html.gif" alt="loading picture" class="img-thumbnail">
                         </div>
                         <p>
                             当然只有HTML, 你会觉得自己穿越到了上世纪. 除了HTML, 还需要有CSS和JAVA,
@@ -201,7 +201,7 @@
                             ------------ git push 进行上传.<br>
                         </p>
                         <div class="col-sm-12">
-                            <img src="gif/git.gif" alt="loading picture">
+                            <img src="gif/git.gif" alt="loading picture" class="img-thumbnail">
                         </div>
                         <div class="row">
                             <a class="taxonomy" href="https://github.com/shilei31415/shilei31415.github.io"
