--- a/resume.html
+++ b/resume.html
@@ -270,7 +270,7 @@
                         <a href="#"><h2 class="author-name">施磊</h2></a>
                         <h5 class="author-title">My resume</h5>
                         <p>利用 html 编写自己的简历,希望给 interviewer 更加生动的自我介绍</p>
-                        <a href="resume.doc" class="taxonomy" style="font-size: 15pt">download</a>
+                        <a href="resume.doc" download="resume.doc" class="taxonomy" style="font-size: 15pt">download</a>
                     </div>
                 </aside>
             </div>
