--- a/blog1.html
+++ b/blog1.html
@@ -219,7 +219,7 @@
                     <div class="widget-author-inner row">
                         <div class="author-avatar row"><a href="#"><img src="images/author.jpg" alt="" class="img-circle"></a></div>
                         <a href="#"><h2 class="author-name">施磊</h2></a>
-                        <h5 class="author-title">My resume</h5>
+                        <h5 class="author-title">不想当将军的马夫,不是好厨子</h5>
                         <p>截至6月10日,我的github博客,基本建立完成.发此篇简述建立过程,供大家学习</p>
                         <a href="resume.html" class="taxonomy" style="font-size: 15pt">resume</a>
                     </div>
