--- a/resume.html
+++ b/resume.html
@@ -262,15 +262,15 @@
                     </div>
                 </article>
             </div>
+            <!--Author Widget-->
             <div class="col-md-4 sidebar">
-                <!--Author Widget-->
                 <aside class="row m0 widget-author widget">
                     <div class="widget-author-inner row">
                         <div class="author-avatar row"><a href="#"><img src="images/author.jpg" alt="" class="img-circle"></a></div>
                         <a href="#"><h2 class="author-name">施磊</h2></a>
-                        <h5 class="author-title">My resume</h5>
-                        <p>利用 html 编写自己的简历,希望给 interviewer 更加生动的自我介绍</p>
-                        <a href="resume.doc" download="resume.doc" class="taxonomy" style="font-size: 15pt">download</a>
+                        <h5 class="author-title">不想当将军的马夫,不是好厨子</h5>
+                        <p>截至6月10日,我的github博客,基本建立完成.发此篇简述建立过程,供大家学习</p>
+                        <a href="resume.pdf" download="resume.pdf" class="taxonomy" style="font-size: 15pt">download</a>
                     </div>
                 </aside>
             </div>
