--- a/blog2.html
+++ b/blog2.html
@@ -119,6 +119,7 @@
                             最近由在简历中提到, 写此篇,作为补充说明.
                         </h4>
                         <br>
+                        <p>由于年代久远, 大部分图片资料已丢失, 本文大部分图片都来源于网络</p>
                         <h3>1. 规则</h3>
                         <p>详细规则有一大堆, 我便长话短说. "无人车" 这一比赛分为两个项目:</p>
                         <h4>项目一: 超车及会车</h4>
@@ -129,22 +130,72 @@
                             在不违反交通规则的前提下, 遇到前方减速锥, 进入逆向车道行驶, 再次遇到前方减速锥,返回原车道;<br>
                             与减速标线, 及时减速, 并在斑马线前停车, 等待5S, 后继续行驶过终点
                         </p>
-                        <a href="#" style="font-size: 15pt">详细规则参见此处</a><br>
+                        <br>
                         <h3>
                             2. 视觉处理
                         </h3>
-                        <h4>视觉处理部分主要由我完成, 当然也少不了小伙伴的帮助. 因此我可以较为详细的讲解视觉处理部分</h4>
-                        <h4>2.1 直线识别</h4>
-                        <p>我采用了霍夫直线变换, 进行直线的检测. 简单讲解一下霍夫直线检测的原理, 及使用</p>
-                        <br>
+                        <p>视觉处理, 其实就是: 读入图片, 到计算出当前车体状态的过程, 这是本篇的重点</p>
+                        <h4>
+                            2.1 开发环境
+                        </h4>
                         <p>
-                            每一条直线都包含两独立个变量(无论哪种直线方程), 令该直线过一指定点后,
-                            直线方程就只包含一个独立变量, 或者说我可以找到直线方程中两个变量之间的关系.
-                            这里用   公式,
-                            由此求出图中直线
+                            系统环境ubuntu16.04<br>
+                            使用CLion作为代码编写调试的平台<br>
+                            调用opencv中的函数进行图像的处理 识别<br>
+                            <div>
+                                <img src="images/blog/autodrive_env.png" alt="loading picture" class="img-thumbnail">
+                            </div>
                         </p>
+                        <h4>
+                            2.2 逆透视变换
+                        </h4>
                         <p>
-                            根据求得的直线计算车辆与规定路线的偏离情况,借此控制车体
+                            平直道路的道路标线相互平行, 永不相交, 但在人眼看来, 它们似乎都汇聚于一点, 这就是因为存在透视现象.
+                            这种现象增加了计算车体姿态的难度, 所以从摄像头获取图像后, 我们进行了逆透视变换<br>
+                            代码也不复杂, 仅仅调用了cv::warpPerspective(src, dst, warp_mat, size); 输入原图,目标图像和相应的变换矩阵即可.
+                            矩阵可以事先测量, 因为它仅与摄像头参数, 姿态有关, 详细方法可以查看:<br>
+                            <a href="https://blog.csdn.net/ganbelieve/article/details/91996326">https://blog.csdn.net/ganbelieve/article/details/91996326</a>
+                            <div>
+                                <img src="images/blog/change.gif" alt="loading picture" class="img-thumbnail">
+                            </div>
+                        </p>
+                        <h4>
+                            2.3 霍夫直线变换
+                        </h4>
+                        <p>
+                            霍夫直线变换可以理解为将图像中点的坐标(x,y), 转换为ρ Θ空间中的一条曲线, 曲线上每一点(ρ,Θ)代表一条过(x, y)的直线,
+                            该直线做垂线过原点, 垂线长度为ρ, 与坐标轴夹角为Θ. 当ρ Θ空间中两曲线相交于一点, 代表图像空间中的两点共线,
+                            当ρ Θ空间中五百条曲线相交于一点, 代表图像空间中的五百个点共线, 即我们常说的直线段<br>
+                            说白了,这就是用来找直线的, 具体变换可参考:<br>
+                            <a href="https://blog.csdn.net/shenziheng1/article/details/75307410">https://blog.csdn.net/shenziheng1/article/details/75307410</a>
+                            具体步骤如下:(相关图片没有保存)<br>
+                            ①图线二值化, 突出道路标线(白)与路面(黑)<br>
+                            ②Canny边缘检测, 可以理解为找出图片中像素值突变的区域(梯度大于阈值)<br>
+                            ③将检测结果输入霍夫变换<br>
+                        </p>
+                        <div>
+                            <img src="images/blog/autodrive_code.png" alt="loading picture" class="img-thumbnail">
+                        </div>
+                        <p>
+                            实际使用过程中, 效果却并不理想, 对同一道路标线, 常常检测出多条相交的直线, 因此我们还对这些直线进行了筛选.
+                            利用直线的ρ Θ值进行筛选,(图片很精彩,可惜没了) 找到最佳的两条, 求取平均, 得到最终的直线, 该直线的Θ表示了
+                            车体与目标方向的偏离程度, ρ表示了车体是靠近左标线还是靠近右标线
+                        </p>
+                        <h4>
+                            2.4 斑马线及停车线检测
+                        </h4>
+                        <p>
+                            起初打算想道路标线检测一样, 使用霍夫直线检测, 判断前方是否有斑马线或停车线, 但效果不理想, 后尝试使用SVM, 判断图中是否有斑马线,
+                            结果SVM受环境影响较大.<br>
+                            最后决定使用最简单的方法: 计算图片中白色区域的面积<br>
+                            在正常道路上行驶, 只有两侧标线为白色, 白色较少, 当出现停车线及斑马线时, 白色区域增多, 同时为了避免环境亮度干扰, 以图像平均亮度作为二值化的阈值.
+                            这种方法简单粗暴, 但却很有效.
+                        </p>
+                        <h4>
+                            2.5 回想
+                        </h4>
+                        <p>
+                            现在回想起来, 当时的我真是又笨又勤奋, 现在我会使用神经网络, 输入图像, 输出控制车体的指令, 然后用遥控器训练它一周, 肯定跑的飞快
                         </p>
                         <br>
                         <h3>
@@ -171,6 +222,12 @@
                             我们难以教会电脑:"是ttyUSB0代表雷达,还是ttyUSB1代表雷达"</h4>
                         <p>
                             我们通过"串口绑定"解决这一问题.
+                        </p>
+                        <h3>
+                            5. 代码
+                        </h3>
+                        <p>
+                            具体代码参考我的<a href="https://github.com/shilei31415/AutoDrive">github</a>
                         </p>
                     </div>
                 </article>
