--- a/blog2.html
+++ b/blog2.html
@@ -229,6 +229,13 @@
                         <p>
                             具体代码参考我的<a href="https://github.com/shilei31415/AutoDrive">github</a>
                         </p>
+                        <h3>
+                            6. 参赛视频
+                        </h3>
+                        <p>
+                            最后给大家献上参赛视频<br>
+                            <a href="https://www.bilibili.com/video/BV1iV411k7Eg?from=search&seid=6004852311073970695"><img src="images/blog/bilibili.png"></a>
+                        </p>
                     </div>
                 </article>
             </div>
