--- a/blog6.html
+++ b/blog6.html
@@ -485,6 +485,13 @@
                             最后给大家献上测试视频<br>
                             <a href="https://www.bilibili.com/video/BV1Bk4y1m7ux/"><img src="images/blog/bilibili.png"></a>
                         </p>
+                        <h3>
+                            5 具体代码
+                        </h3>
+                        <p>
+                            <a href="https://github.com/shilei31415/ID_card">https://github.com/shilei31415/ID_card</a>
+                        </p>
+                        <br>
                         <br>
                         <h5>
                             PS:本文为我参加"全国大学生集成电路创新创业大赛 RSIC-V分赛"所提交的报告,因此文笔与之前略有不同
