--- a/RM.html
+++ b/RM.html
@@ -47,13 +47,12 @@
             <div class="col-sm-4 search-form-col">
                 <form action="#" method="get" class="search-form">
                     <div class="input-group">
-                        <!--<span class="input-group-addon"><img src="images/search-icon-white.png" alt=""></span>-->
-                        <!--<input type="search" class="form-control" placeholder="search">-->
+                        <img src="images/stone2.png" alt="">
                     </div>
                 </form>
             </div>
             <div class="col-sm-4 logo-col text-center">
-                <h3>The world of 施磊</h3>
+                <h3>3 Stones</h3>
             </div>
             <div class="col-sm-4 menu-trigger-col">
                 <button class="menu-trigger pull-right">
@@ -234,7 +233,7 @@
     <div class="container">
         <div class="row top-footer">
             <div class="widget col-sm-3 widget-about">
-                <h3>The world of 施磊</h3>
+                <h3>3 Stones</h3>
             </div>
             <div class="widget col-sm-5 widget-menu">
                 <div class="row">
