--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--========== The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags ==========-->
-    <title>The world of 3 stone</title>
+    <title>3 Stones</title>
 
     <!--==========Dependency============-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -47,13 +47,12 @@
             <div class="col-sm-4 search-form-col">
                 <form action="#" method="get" class="search-form">
                     <div class="input-group">
-                        <!--<span class="input-group-addon"><img src="images/search-icon-white.png" alt=""></span>-->
-                        <!--<input type="search" class="form-control" placeholder="search">-->
+                        <img src="images/stone2.png" alt="">
                     </div>
                 </form>
             </div>
             <div class="col-sm-4 logo-col text-center">
-                <h3>The world of 施磊</h3>
+                <h3>3 Stones</h3>
             </div>
             <div class="col-sm-4 menu-trigger-col">
                 <button class="menu-trigger pull-right">
@@ -76,19 +75,15 @@
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="index2.html">2020-6月</a></li>
                                     <!--跳转到home页的某一行-->
-                                    <li><a href="index3.html">Home Option 3</a></li>
-                                    <li><a href="index4.html">Home Option 4</a></li>
-                                    <li><a href="index5.html">Home Option 5</a></li>
-                                    <li><a href="index6.html">Home Option 6</a></li>
                                 </ul>
                             </li>
                             <li><a  href="resume.html">resume(个人简历)</a></li>
-                            <li><a href="single.html">my memery(我的回忆)</a></li>
-                            <li><a href="single2.html">my store(我的小店)</a></li>
+                            <li><a href="blog2.html">my memery(我的回忆)</a></li>
+                            <li><a href="https://space.bilibili.com/526402170">bilibili</a></li>
                         </ul>
                         <ul class="nav column-menu black-bg">
                             <li><a href="blog3.html">I'm reading(最近在读)</a></li>
-                            <li><a href="single3.html">I'm doing(最近在做)</a></li>
+                            <li><a href="#">I'm doing(最近在做)</a></li>
                             <li><a href="https://github.com/shilei31415">github</a></li>
                         </ul>
                     </div>
@@ -378,7 +373,7 @@
     <div class="container">
         <div class="row top-footer">
             <div class="widget col-sm-3 widget-about">
-                <h3>The world of 施磊</h3>
+                <h3>3 Stones</h3>
             </div>
             <div class="widget col-sm-5 widget-menu">
                 <div class="row">
