--- a/resume.html
+++ b/resume.html
@@ -138,9 +138,9 @@
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">职位：</p>
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">薪资：</p>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-7">
                                 <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">全职</p>
-                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">机器视觉工程师</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">机器视觉工程师/材料工程师</p>
                                 <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">8000元/月</p>
                             </div>
                         </div>
@@ -159,13 +159,31 @@
                         </div>
                     </div>
                     <div class="row" >
+                        <!--RoboWork“视觉分拣”赛-->
                         <div class="col-sm-12">
                             <p style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">项目经验</p>
+                            <div class="col-sm-2">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2019/4</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
+                            </div>
+                            <a href="https://www.bilibili.com/video/BV11f4y1Q7yj/">
+                                <div class="col-sm-10">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">RoboWork“视觉分拣”赛</p>
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                        通过摄像头拍摄托盘,利用视觉算法分析目标物位置,并控制机械手获取目标物<br>
+                                        1.通过托盘的红色边缘找到托盘位置,获取 ROI。<br>
+                                        2.通过颜色筛选,得到目标物,并计算其坐标。<br>
+                                        3.串口发送坐标,实现获取。<br>
+                                </div>
+                            </a>
+                        </div>
+                        <!--1:10无人车多车交互赛-->
+                        <div class="col-sm-12">
                             <div class="col-sm-2">
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2019/10</p>
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
                             </div>
-                            <a href="https://github.com/shilei31415/AutoDrive">
+                            <a href="blog2.html">
                                 <div class="col-sm-10">
                                     <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">1:10无人车多车交互赛</p>
                                     <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
@@ -182,25 +200,52 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="col-sm-2">
-                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2020/5-至今</p>
-                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
-                                </div>
-                                <a href="https://github.com/shilei31415/shilei31415.github.io">
-                                    <div class="col-sm-10">
-                                        <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">个人github.io博客</p>
-                                        <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
-                                            建立属于自己的github.io博客，用于介绍自己，并不定期更新<br>
-
-                                            1.在本地电脑编写html网页。<br>
-
-                                            2.将相关文件上传至github</p>
-
-                                    </div>
-                                </a>
+                        <!--RoboMaster 省赛-->
+                        <div class="col-sm-12">
+                            <div class="col-sm-2">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2019/12</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
                             </div>
+                            <div class="col-sm-10">
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">RoboMaster 省赛</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                    包括“击打小陀螺”及“2V2 对抗赛”<br>
+                                    1.利用装甲板的 Mark 找到装甲板。<br>
+                                    2.预测装甲板位置,并计算枪口角度。<br>
+                                </p>
+                            </div>
+                        </div>
+                        <!--个人github.io博客-->
+                        <div class="col-sm-12">
+                            <div class="col-sm-2">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2020/5-至今</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
+                            </div>
+                            <a href="https://github.com/shilei31415/shilei31415.github.io">
+                                <div class="col-sm-10">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">个人github.io博客</p>
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                        建立属于自己的github.io博客，用于介绍自己，并不定期更新<br>
+                                        1.在本地电脑编写html网页。<br>
+                                        2.将相关文件上传至github</p>
+                                    </div>
+                            </a>
+                        </div>
+                        <!--工程训练-->
+                        <div class="col-sm-12">
+                            <div class="col-sm-2">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2020/9</p>
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">项目描述：</p>
+                            </div>
+                            <a href="https://github.com/shilei31415/shilei31415.github.io">
+                                <div class="col-sm-10">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:bold">工程训练“异质原子掺杂石墨烯的绿色环保、高效安全制备及其电化学储能测试”</p>
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                        制备掺杂石墨烯,作为钠电池电极<br>
+                                        1.溶胶-凝胶一锅法制备掺杂石墨烯。<br>
+                                        2.组装石墨烯-钠电池,并测试其性能。</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="row" style="border-top:1px solid #F0F0F0">
@@ -210,8 +255,54 @@
                                 <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">校内荣誉</p>
                             </div>
                             <div class="col-sm-12">
-                                <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">3次获得"三等奖学金"、1次"二等奖学金"</p>
-                                <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">江苏省机器人大赛一等奖</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">2次获得"三等奖学金"、1次"二等奖学金"</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">江苏省机器人大赛一等奖、南京理工大学机器人大赛二等奖</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">江苏省大学生力学竞赛二等奖、全国周培源大学生力学竞赛优秀奖</p>
+                                <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">校级大学物理竞赛一等奖</p>
+                            </div>
+                            <div class="col-sm-12" style="background-color: #F0F0F0">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">实习经历</p>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-2">
+                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2018/9</p>
+                                </div>
+                                <div class="col-sm-10">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">金工实习</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-2">
+                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2019/7</p>
+                                </div>
+                                <div class="col-sm-10">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">南京中电熊猫液晶显示科技有限公司成盒部实习工作</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-2">
+                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2020/8</p>
+                                </div>
+                                <div class="col-sm-10">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">中科院苏州纳米所接受“纳米科技与 IC 芯片”实习培训</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-12" style="background-color: #F0F0F0">
+                                <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">在校成绩</p>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-2">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">学分绩点</p>
+                                </div>
+                                <div class="col-sm-4">
+                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">3.21/4.0</p>
+                                </div>
+                                <div class="col-sm-2">
+                                    <p style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">平均分</p>
+                                </div>
+                                <div class="col-sm-4">
+                                    <p style="color:#666666; font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">82.63</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -257,6 +348,27 @@
                                 <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2018/4</div>
                                 <span style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">普通话二级甲等</span>
                             </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2018/5</div>
+                                <span style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">江苏省计算机二级</span>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="col-sm-4" style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">2020/3</div>
+                                <span style="color:#333333; font-family:微软雅黑; font-size:10.5pt; font-style:normal; font-variant:normal; font-weight:bold">C1驾照</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="border-top:1px solid #F0F0F0">
+                        <div class="col-sm-12">
+                            <span style="color:#818ba3; font-family:微软雅黑; font-size:12pt; font-style:normal; font-variant:normal; font-weight:bold">技能特长</span>
+                            <div class="col-sm-12">
+                                <div style="font-family:微软雅黑; font-size:9pt; font-style:normal; font-variant:normal; font-weight:normal">
+                                    品行端正,个性沉稳,做事严谨认真;能以诚待人;与同学及朋友相处融 洽,乐于助人。<br>
+                                    在学习上力求上进,对本专业的知识有浓厚的兴趣,认真钻研,打下了坚 实的专业知识基础。<br>
+                                    有担当,吃苦耐劳,有较强的学习能力及组织协调能力。
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </article>
